# b0RemoteApiBindings

./: .gitignore  bindingsGenerationInfo.txt  config.pri  license.txt  simpleTest-scene.ttt
cpp/: b0RemoteApi.cpp  b0RemoteApi.h  config.pri
cpp/bubbleRobClient/: CMakeLists.txt  bubbleRobClient.cpp  bubbleRobClient.pro  rebuild-ubuntu_mac.sh  rebuild-windows.bat
cpp/bubbleRobClient/cmake/modules/: FindBlueZero.cmake
cpp/simpleTest/: config.pri  rebuild-ubuntu_mac.sh  rebuild-windows.bat  simpleTest.cpp  simpleTest.pro
cpp/testing/: config.pri  rebuild-ubuntu_mac.sh  rebuild-windows.bat  testing.cpp  testing.pro
generate/: generate.py  readme.txt  simxFunctions.xml
generate/model/: command.py  param.py
generate/simxStubs/: doc-list.htm  doc-list.html  doc.htm  doc.html
generate/simxStubs/cpp/: stubs.cpp  stubs.h
generate/simxStubs/java/: stub.java
generate/simxStubs/lua/: stub.lua
generate/simxStubs/matlab/: stub.m
generate/simxStubs/python/: stub.py
java/: simpleTest.java  testing.java
java/coppelia/: b0RemoteApi.java
lua/: b0RemoteApi.lua  b0RemoteApiLua.pro  b0remoteApiLua.cpp  config.pri  simpleTest.lua  testing.lua
matlab/: b0RemoteApi.m  b0RemoteApiProto.m  simpleTest.m  testing.m
python/: b0.py  b0RemoteApi.py  pController.py  sendIkMovementSequence-mov.py  sendIkMovementSequence-pts.py  sendMovementSequence-mov.py  sendMovementSequence-pts.py  sendSimultan2MovementSequences-mov.py  simpleTest.py  synchronousImageTransmission.py  testing.py
test/: test.cpp  test.h  test.lib  test.pro
test2/: test2.cpp  test2.pro
(+2 files in other folders)
